--- a/public/setup.html
+++ b/public/setup.html
@@ -3,7 +3,7 @@
 <head>
     <title>Limbo Flimbo</title>
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
-
+    <meta name="apple-mobile-web-app-capable" content="yes">
 <style type="text/css">
     body {
         background-color:#f0f0f0;
