--- a/public/draw.html
+++ b/public/draw.html
@@ -7,7 +7,7 @@
         <style type="text/css"> 
 
             @font-face {
-                font-family: sigoil;
+                font-family: sligoil;
                 src: url('assets/Sligoil-Micro copy.otf');
             }
 
@@ -82,7 +82,7 @@
                 top: 120px;
                 width: 800px;
                 font-size: 16px;
-                font-family: sigoil;
+                font-family: sligoil;
                 font-weight: 700;
                 pointer-events: none;
             }
@@ -164,7 +164,7 @@
             .select-modal .subtitle,
             .modal-dialog-content .subtitle {
                 text-align: center;
-                font-family: sigoil;
+                font-family: sligoil;
                 font-size: 20px;
                 margin-top: 30px;
                 margin-bottom: 60px;
@@ -250,7 +250,7 @@
 
             .done-bubble-de {
                 font-size: 11px;
-                font-family: sigoil;
+                font-family: sligoil;
                 text-align: right;
                 margin-top: 35px;
                 margin-right: 40px;
