--- a/public/draw.html
+++ b/public/draw.html
@@ -496,6 +496,16 @@
         initColorSelector();
         initBrushSelector();
 
+        clearCanvas();
+        hide('doneBubble');
+        hide('printingDialog');
+        hide('doneDialog');
+        if (data.state[client === 'a' ? 'b' : 'a'].done) show('doneBubble');
+        if (data.state.a.done && data.state.b.done) {
+            hide('doneBubble');
+            show('doneDialog');
+        }
+
         data.strokes.forEach(function (d) {
             remoteDrawHandler(d);
         });
